[package]
name = "test_ab"
version = "0.1.0"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"

[dependencies]
axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
uuid = { version = "1.4.1", features = ["v7", "serde"] }
serde = { version = "1.0.183", features = ["derive"] }
